--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 
   <!-- iOS -->
   <div id="ios-content" class="device-section">
-    <h1>iOS version</h1>
-    <p>Dette vises kun på iPhones eller iPads.</p>
+    <h1>Iphone</h1>
+    <p class=IOS> Desværre kan RoyalGO kun spilles på Android-enheder. iOS-enheder understøttes ikke på nuværende tidspunkt.</p>
+    </p>
   </div>
 
 
