--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- iOS -->
   <div id="ios-content" class="device-section">
     <h1>Iphone</h1>
-    <img src="img/noiphone.png" alt="advarsel til iOS brugere">
+    <img id="IOSimage" src="img/noiphone.png" alt="advarsel til iOS brugere">
     <p class=IOS> Desværre kan RoyalGO kun spilles på Android-enheder. <br> iOS-enheder understøttes ikke på nuværende tidspunkt.</p>
     </p>
   </div>
