--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
   <!-- Desktop -->
   <div id="desktop-content" class="device-section">
-    <h1>Desktop version</h1>
-    <p>Dette vises kun på computere (Windows, Mac, Linux).</p>
+    <h1 id="dektoptekst">Hent appen Her:</h1>
+     <div id="qrcode"></div>
   </div>
 
   <!-- Android -->
   <div id="android-content" class="device-section">
-    <h1>Android version</h1>
-    <p>Dette vises kun på Android-enheder.</p>
+  <p>download appen her:</p>
+  <a href="download/Royal GO.apk">Klick mig!</a>
   </div>
 
   <!-- iOS -->
@@ -28,7 +28,7 @@
     </p>
   </div>
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <script src="downloadscript.js"></script>
 </body>
 </html>
